plugins {
    alias(libs.plugins.nexus.publish.plugin)
    alias(libs.plugins.sonarqube)
}

subprojects {
    if (name != "frontend") {
        apply plugin: "java"

        java {
            sourceCompatibility = JavaVersion.VERSION_25
            targetCompatibility = JavaVersion.VERSION_25
        }
    }

    repositories {
        mavenCentral()
        maven {
            name = 'confluent'
            url = 'https://packages.confluent.io/maven/'
        }
    }

    group = 'io.kafbat'
    version = version

}

boolean resolveBooleanProperty(String propertyName, boolean defaultValue = false) {
    def propertyValueStr = findProperty(propertyName)
    return propertyValueStr == null ? defaultValue : propertyValueStr.toBoolean()
}

ext {
    release = resolveBooleanProperty("release")
    includeFrontend = resolveBooleanProperty("include-frontend", release)
    buildDockerImages = resolveBooleanProperty("build-docker-images", release)
    useTypeSpec = resolveBooleanProperty("typespec", true)
    runE2e = resolveBooleanProperty("run-e2e")
}

sonar {
    properties {
        property "sonar.projectKey", "kafbat_kafka-ui"
        property "sonar.organization", "kafbat"
        property "sonar.host.url", "https://sonarcloud.io"
        property "sonar.exclusions", "**/e2e-tests/**/*"
    }
}

if (release) {
    nexusPublishing {
        repositories {
            sonatype {
                nexusUrl = uri("https://ossrh-staging-api.central.sonatype.com/service/local/")
                snapshotRepositoryUrl = uri("https://ossrh-staging-api.central.sonatype.com/content/repositories/snapshots/")

                username = System.getenv("NEXUS_USERNAME")
                password = System.getenv("NEXUS_PASSWORD")
            }
        }
    }
}
